2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sodipodi-ctrl.c (sp_ctrl_build_cache): Cleaned up bitmap build

2002-11-17  Masatake YAMATO  <jet@gyve.org>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Added small
	space between attribute name text field and set attribute 
	button.

2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Cleanup by MenTaLguY

	* src/widgets/sp-xmlview-attr-list.c (event_attr_changed): Clamping string
	width to 64[+3], thanks to MenTaLguY

2002-11-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c (sp_canvas_motion): Get pointer if motion hints are requested

	* src/select-context.c (sp_select_context_item_handler): Use motion hints

	* src/dialogs/text-edit.c (sp_text_edit_dialog_read_selection): Kill annoying
	warning about position > length

	* src/style.h (SP_SCALE24_FROM_FLOAT): Use temporary (double) cast
	(SP_SCALE24_TO_FLOAT): Ditto

	* src/dialogs/xml-tree.c (cmd_set_attr): Use gal unicode wrappers

	* src/widgets/sp-xmlview-attr-list.c (event_attr_changed): Use gal unicode wrappers

	* src/widgets/sp-xmlview-content.c (event_content_changed): Use gal unicode wrappers
	(sp_xmlview_content_changed): Ditto

	* src/widgets/sp-xmlview-tree.c (element_attr_changed): Use gal unicode wrapper
	(text_content_changed): Ditto

	* src/dialogs/xml-tree.c: Sorted out includes a bit
	(set_tree_desktop): Comment aout transient, as some WMs do not do it proper
	(on_desktop_selection_changed): Set/release block
	(on_tree_unselect_row): Ditto
	(on_tree_select_row): Ditto
	(get_dt_select): Use selection helper methods

2002-11-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_glyph_outline_get): Use
	metrics properly

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_ensure_slot_v): Implement for
	font missing vertical metrics
	(nr_typeface_ft2_ensure_outline): Ditto
